--- a/todo_notes/frontend/src/styles/Note.css
+++ b/todo_notes/frontend/src/styles/Note.css
@@ -1,33 +1,47 @@
 .note-container {
-    padding: 10px;
-    margin: 20px 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .note-title {
+    padding: 1rem;
+    border: 1px solid hsl(341 ,64%, 55%);
+    border-radius: 1.5rem;
+    margin: 0 auto 1rem;
+    max-width: 85%;
+    transition: background-color 0.5s ease, box-shadow 0.5s ease;
+    /* background: hsl(210, 31%, 80%); */
+}
+
+.note-container:hover {
+    background: hsl(210, 31%, 80%);
+    box-shadow: 0.5rem 0.5rem 0.5rem hsl(341 ,64%, 55%);
+} 
+
+.note-title {
     color: #333;
-  }
-  
-  .note-content {
+    display: flex;
+    justify-content: center;
+}
+
+.note-content {
     color: #666;
-  }
-  
-  .note-date {
+    display: flex;
+    justify-content: center;
+}
+
+.note-date {
     color: #999;
     font-size: 0.8rem;
-  }
-  
-  .delete-button {
-    background-color: #f44336; /* Red */
+    display: flex;
+    justify-content: flex-end;
+}
+
+.delete-button {
+    background-color: #f44336; 
     color: white;
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
-  }
-  
-  .delete-button:hover {
-    background-color: #d32f2f; /* Darker red */
-  }
+}
+
+.delete-button:hover {
+    background-color: #d32f2f;
+}
