--- a/todo_notes/frontend/src/styles/Form.css
+++ b/todo_notes/frontend/src/styles/Form.css
@@ -23,7 +23,7 @@
     width: 95%;
     padding: 10px;
     margin: 20px 0;
-    background-color: #007bff;
+    background-color: hsl(181, 70% ,18%);
     color: white;
     border: none;
     border-radius: 4px;
