--- a/todo_notes/frontend/src/styles/Home.css
+++ b/todo_notes/frontend/src/styles/Home.css
@@ -1,68 +1,105 @@
 /* Container for the whole page */
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+body {
+    /* min-height: 100vh; */
+    /* text-rendering: optimizeSpeed; */
+    margin:0 auto 1rem;
+    background-image: url('../images/flower.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    
+}
+
 div {
     font-family: Arial, sans-serif;
-  }
-  
+}
+
+.info-text {
+    display: flex;
+    justify-content: center;
+    font-size: 1.5rem;
+}
   /* Styles for the notes section */
-  .notes-section {
+.notes-section {
     margin-bottom: 2rem;
-  }
-  
-  .notes-section h2 {
+}
+
+.notes-section h2 {
     color: #333;
     font-size: 24px;
-  }
-  
+}
+
   /* Styles for individual notes - assuming your Note component has some container element */
-  .note {
+.note {
     background-color: #f9f9f9;
     border-left: 5px solid #007bff;
     margin: 10px 0;
     padding: 10px 15px;
     border-radius: 5px;
-  }
-  
+}
+
   /* Styles for the form section */
-  form {
+form {
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     max-width: 500px;
-    margin: auto;
-  }
-  
-  form h2 {
+    margin: 0 auto 1rem;
+}
+
+form h2 {
     color: #333;
     font-size: 24px;
     margin-bottom: 20px;
-  }
-  
-  form label {
+}
+
+form label {
     font-weight: bold;
     margin-top: 10px;
-  }
-  
-  form input,
-  form textarea {
+}
+
+form input,
+form textarea {
     width: 100%;
     padding: 8px;
     margin: 8px 0 16px;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-  }
-  
-  form input[type="submit"] {
-    background-color: #007bff;
+}
+
+form input[type="submit"] {
+    background-color: hsl(181, 70% ,18%);
     color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
-  }
-  
-  form input[type="submit"]:hover {
-    background-color: #0056b3;
-  }
+}
+
+form input[type="submit"]:hover {
+    background-color: hsl(181, 78%, 34%);
+}
+
+.footer {
+    justify-content: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: hsl(205, 17%, 26%)        ;
+    padding: 0.7rem;
+    text-align: center;
+    box-shadow: 5px 0 15px rgba(175, 254, 247, 0.6);
+}
+
+.footer p {
+    color: #fff;
+    margin: 0;
+}
