--- a/todo_notes/frontend/src/styles/Home.css
+++ b/todo_notes/frontend/src/styles/Home.css
@@ -1,12 +1,10 @@
-/* Container for the whole page */
 *,
 *::before,
 *::after {
     box-sizing: border-box;
 }
+
 body {
-    /* min-height: 100vh; */
-    /* text-rendering: optimizeSpeed; */
     margin:0 auto 1rem;
     background-image: url('../images/flower.jpg');
     background-repeat: no-repeat;
@@ -24,37 +22,35 @@ div {
     justify-content: center;
     font-size: 1.5rem;
 }
-  /* Styles for the notes section */
+
 .notes-section {
     margin-bottom: 2rem;
 }
 
 .notes-section h2 {
-    color: #333;
+    color: hsl(0, 0%, 20%);
     font-size: 24px;
 }
 
-  /* Styles for individual notes - assuming your Note component has some container element */
 .note {
-    background-color: #f9f9f9;
-    border-left: 5px solid #007bff;
+    background-color: hsl(0, 0%, 97%);
+    border-left: 5px solid hsl(210, 100%, 50%);
     margin: 10px 0;
     padding: 10px 15px;
     border-radius: 5px;
 }
 
-  /* Styles for the form section */
 form {
-    background-color: #fff;
+    background-color: hsl(0, 0%, 100%);
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px hsla(0, 0%, 0%, 0.1);
     max-width: 500px;
     margin: 0 auto 1rem;
 }
 
 form h2 {
-    color: #333;
+    color: hsl(0, 0%, 20%);
     font-size: 24px;
     margin-bottom: 20px;
 }
@@ -69,14 +65,14 @@ form textarea {
     width: 100%;
     padding: 8px;
     margin: 8px 0 16px;
-    border: 1px solid #ccc;
+    border: 1px solid hsl(0, 0%, 80%);
     border-radius: 4px;
     box-sizing: border-box;
 }
 
 form input[type="submit"] {
     background-color: hsl(181, 70% ,18%);
-    color: white;
+    color: hsl(0, 0%, 100%);
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
@@ -86,6 +82,24 @@ form input[type="submit"] {
 
 form input[type="submit"]:hover {
     background-color: hsl(181, 78%, 34%);
+}
+
+.logout-button {
+    text-decoration: none;
+    padding: 0.7rem;
+    background-color: hsl(181, 70%, 18%);
+    color: hsl(0, 0%, 100%);
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+    position: absolute;
+    top: 1rem; 
+    right: 1.5rem;
+}
+
+.logout-button:hover {
+    background-color: hsl(181, 45%, 37%);
 }
 
 .footer {
@@ -100,6 +114,6 @@ form input[type="submit"]:hover {
 }
 
 .footer p {
-    color: #fff;
+    color: hsl(0, 0%, 100%);
     margin: 0;
 }
