--- a/todo_notes/frontend/src/styles/LoadingIndicator.css
+++ b/todo_notes/frontend/src/styles/LoadingIndicator.css
@@ -5,8 +5,8 @@
 }
   
 .loader {
-  border: 5px solid #f3f3f3; /* Light grey */
-  border-top: 5px solid #3498db; /* Blue */
+  border: 5px solid hsl(0, 0%, 100%); 
+  border-top: 5px solid hsl(204, 100%, 56%);
   border-radius: 50%;
   width: 50px;
   height: 50px;
