--- a/todo_notes/frontend/src/styles/Note.css
+++ b/todo_notes/frontend/src/styles/Note.css
@@ -26,7 +26,7 @@
 }
 
 .note-date {
-    color: #000;
+    color: hsl(0, 0%, 0%);
     font-size: 1rem;
     display: flex;
     justify-content: flex-end;
@@ -34,7 +34,7 @@
 
 .delete-button {
     background-color: hsl(325, 66%, 25%); 
-    color: white;
+    color: hsl(0, 0%, 100%);
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
